# необходимый файл для того, чтобы можно было скомпилировать и запустить программу

cmake_minimum_required(VERSION 3.5 FATAL_ERROR) # обозначение того, что нужен минимальный cmake для компиляции написанного кода

project(myprojj) #объявление проекта. название может быть любым, но должно совпадать в последующих объявлениях

find_package(Geant4 REQUIRED ui_all vis_all) # как понял, необходимо для того, чтобы проверить подключение geant4make.sh, где как раз таки можно подключить интерфейс пользователя, в том числе и отрисовку

include(${Geant4_USE_FILE}) # говорим cmake включить в проект также файлы, которые находятся в этом пути


# Расположение искодного кода и заголовочных файлов этого проекта с заданным расширением
# Заголовочные файлы подключаются, значит что они будут показаны в
# IDE - среде разработки

file(GLOB sources ${PROJECT_SOURCE_DIR}/*.cc)
file(GLOB headers ${PROJECT_SOURCE_DIR}/*.hh)


# Добавление исполняемого файла и линковка его с библиотеками Geant4
# еще что-то важное
add_executable(proj proj.cc ${sources} ${headers}) #соот-но, и исполняемый файл должен быть proj.cc
target_link_libraries(proj ${Geant4_LIBRARIES})


# Для внутеренего использования в Geant4, но не имеет влияния если проект
# компилируется для отдельного использования
# еще что-то важное
#add_custom_target(myprojj DEPENDS proj)
